--- a/DinerMax3000Console/App.config
+++ b/DinerMax3000Console/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <connectionStrings>
+    <add name="DinerMax3000.Business.Properties.Settings.DinerMax3000ConnectionString"
+        connectionString="Data Source=.\main;Initial Catalog=DinerMax3000;Persist Security Info=True;User ID=sa;Password=sHare@pass12"
+        providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
